2015-06-20 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_alpha-cpu.c, lib/jit_alpha-fpu.c, lib/jit_alpha.c:
	Add base support to jit vararg functions to the alpha backend.

2015-06-19 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_hppa-cpu.c, lib/jit_hppa-fpu.c, lib/jit_hppa.c:
	Add base support to jit vararg functions to the hppa backend.

2015-06-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64-cpu.c, lib/jit_ia64-fpu.c, lib/jit_ia64.c:
	Add base support to jit vararg functions to the ia64 backend.

2015-06-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64-fpu.c, lib/jit_ia64.c: Correct movi_d_w
	and movi_f_w implementation to work when not using a
	data buffer. This causes the check varargs.tst to
	work when passing "-d" to the lightning test tool.

2015-06-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64.c: Implement inline assembly cache flush,
	required on multiprocessor systems.

2015-06-06 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_mips-cpu.c, lib/jit_mips-fpu.c, lib/jit_mips.c:
	Add base support to jit vararg functions to the mips backend.
	Currently only supported on the o32 abi, until access to a
	n32 system is arranged.

2015-06-05 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ppc-cpu.c, lib/jit_ppc-fpu.c, lib/jit_ppc.c:
	Add base support to jit vararg functions to the PowerPC backend.

2015-06-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_s390-cpu.c, lib/jit_s390-fpu.c, lib/jit_s390.c:
	Add base support to jit vararg functions to the s390 backend.

2015-06-01 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm-cpu.c, lib/jit_arm-swf.c, lib/jit_arm-vfp.c,
	lib/jit_arm.c: Add base support to jit vararg
	functions to the arm backend.

2015-05-30 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64-cpu.c, lib/jit_aarch64-fpu.c,
	lib/jit_aarch64.c: Add base support to jit vararg
	functions to the aarch64 backend.

2015-05-27 Paulo Andrade <pcpa@gnu.org>

	* include/lightning.h, include/lightning/jit_private.h,
	lib/jit_names.c, lib/lightning.c: Add initial support